--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -3,3 +3,30 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
+
+.result::-webkit-scrollbar{
+    display: none;
+}
+
+.loader hr{
+    border-radius: 5px;
+    border: none;
+    background-color: #f6f7f8;
+    background: linear-gradient(to right, #9ed7ff, #ffffff, #9ed7ff);
+    background-size: 800px 50px;
+    height: 20px;
+    animation: loader 3s infinite;
+}
+
+@keyframes loader {
+    0%{
+        background-position: -800px 0px;
+    }
+    100%{
+        background-position: 800px 0px;
+    }
+}
+
+@media (max-width:600px) {
+    
+}
